# inlining-report

./: .gitignore  HACKING.md  README.md  dune-project  ocir.opam
src/lib/: .merlin  dune
src/lib/core/: .merlin  benefit.ml  call_site_decision.ml  code_id.ml  compilation_unit.ml  debuginfo.ml  decision.ml  diff.ml  dune  function_declaration_decision.ml  ident.ml  inlining.ml  inlining_threshold.ml  linkage_name.ml  report.ml  specialization.ml  tree.ml  whether_sufficient_benefit.ml
src/lib/format/: .merlin  dune  inlining_report_format.ml  ocir_format.ml
src/lib/format/flambda1_1_0_0/: closure_id.ml  compilation_unit.ml  debuginfo.ml  dune  ident.ml  inlining_cost.ml  inlining_stats.ml  inlining_stats_types.ml  linkage_name.ml  location.ml  report.ml
src/lib/format/flambda2_1_0_0/: .merlin  code_id.ml  compilation_unit.ml  debuginfo.ml  dune  ident.ml  inlining_cost.ml  inlining_decision.ml  inlining_report.ml  linkage_name.ml  location.ml  report.ml
src/lib/format/flambda2_1_0_0/_build/: log
